--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
 
 
 <section id="c">
-    <img id="fotos1" src="foto ejemplo.jpg" alt="">
+    <picture id="arreglofoto">
+        <source srcset="foto1234.jpg" media="(max-width: 580px)">
+        <source srcset="foto ejemplo.jpg">
+        <img src="foto ejemplo.jpg" alt="" style="width:auto;">
+      </picture>
     <div>
         <h2>Somos Clothes Trades</h2>
         <p>
@@ -52,7 +56,11 @@
 <p class="ps2">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam sit voluptas deleniti perspiciatis, nihil sint veniam accusantium dolorum doloremque omnis illo laboriosam voluptate totam. Reprehenderit dicta rerum illo quaerat magni.
 </p>
-<img id="fotos1" src="foto ejemplo.jpg" alt="">
+<picture id="arreglofoto">
+    <source srcset="foto1234.jpg" media="(max-width: 580px)">
+    <source srcset="foto ejemplo.jpg">
+    <img src="foto ejemplo.jpg" alt="" style="width:auto;">
+  </picture>
    </div>
    
    <div class="apartados">
@@ -61,7 +69,11 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque vero sit a rerum hic minus dicta adipisci doloribus quo, voluptatem ex. Debitis cum fugit delectus consectetur vel at iste quaerat.
     </p>
    
-    <img id="fotos1" src="foto ejemplo.jpg" alt="">
+    <picture id="arreglofoto">
+        <source srcset="foto1234.jpg" media="(max-width: 580px)">
+        <source srcset="foto ejemplo.jpg">
+        <img src="foto ejemplo.jpg" alt="" style="width:auto;">
+      </picture>
 </div>
     </div>
 </section>
@@ -74,24 +86,32 @@
         <div class="LADO-1">
             <h2 class="textolado1">TRANSFERENCIAS</h2>
             <div class="FOTOSS3">
-                <img src="foto ejemplo.jpg" alt="">
+                <picture id="arreglofoto">
+                    <source srcset="foto1234.jpg" media="(max-width: 580px)">
+                    <source srcset="foto ejemplo.jpg">
+                    <img src="foto ejemplo.jpg" alt="" style="width:auto;">
+                  </picture>
             </div>
         </div>
         <div class="Parrafo-1">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, hic eos. Veniam voluptas eum, delectus dolorum sed ex facere dolores repudiandae dolore illum minus mollitia dicta similique ad nostrum. Suscipit.</p>
-            <button>+ INFO</button>
+            <button class="botones">+ INFO</button>
         </div>
         <div class="LADO-2">
             <h2 class="textolado1">TARJETAS DE CREDITO/DEBITO</h2>
             <div class="FOTOSS3">
-                <img src="foto ejemplo.jpg" alt="">
+                <picture id="arreglofoto">
+                    <source srcset="foto1234.jpg" media="(max-width: 580px)">
+                    <source srcset="foto ejemplo.jpg">
+                    <img src="foto ejemplo.jpg" alt="" style="width:auto;">
+                  </picture>
             </div>
         </div>
 
 
         <div class="PARRAFO-2">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus sed quo excepturi, incidunt quidem, alias numquam corrupti eius aut eos rerum architecto molestiae quod quia expedita pariatur? Excepturi, saepe neque!</p>
-            <button>+ INFO</button>
+            <button class="botones">+ INFO</button>
         </div>
       </div>
 </section>
@@ -104,7 +124,11 @@
         <li>✅ Asistencia en Linea</li>
         <li>✅ Distintas Monedas</li>
     </ul>  
-    <img id="fotoej" src="foto ejemplo.jpg" alt="">
+    <picture id="arreglofoto">
+        <source srcset="foto1234.jpg" media="(max-width: 580px)">
+        <source srcset="foto ejemplo.jpg">
+        <img src="foto ejemplo.jpg" alt="" style="width:auto;">
+      </picture>
 </section>
 <footer>
     <p> Conrado Tojo ITBA © 2024</p>
