--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <picture id="arreglofoto">
         <source srcset="foto1234.jpg" media="(max-width: 580px)">
         <source srcset="foto ejemplo.jpg">
-        <img src="foto ejemplo.jpg" alt="" style="width:auto;">
+        <img src="foto ejemplo.jpg" alt="">
       </picture>
     <div>
         <h2>Somos Clothes Trades</h2>
@@ -59,7 +59,7 @@
 <picture id="arreglofoto">
     <source srcset="foto1234.jpg" media="(max-width: 580px)">
     <source srcset="foto ejemplo.jpg">
-    <img src="foto ejemplo.jpg" alt="" style="width:auto;">
+    <img src="foto ejemplo.jpg" alt="">
   </picture>
    </div>
    
@@ -72,7 +72,7 @@
     <picture id="arreglofoto">
         <source srcset="foto1234.jpg" media="(max-width: 580px)">
         <source srcset="foto ejemplo.jpg">
-        <img src="foto ejemplo.jpg" alt="" style="width:auto;">
+        <img src="foto ejemplo.jpg" alt="">
       </picture>
 </div>
     </div>
@@ -89,7 +89,7 @@
                 <picture id="arreglofoto">
                     <source srcset="foto1234.jpg" media="(max-width: 580px)">
                     <source srcset="foto ejemplo.jpg">
-                    <img src="foto ejemplo.jpg" alt="" style="width:auto;">
+                    <img src="foto ejemplo.jpg" alt="">
                   </picture>
             </div>
         </div>
@@ -103,7 +103,7 @@
                 <picture id="arreglofoto">
                     <source srcset="foto1234.jpg" media="(max-width: 580px)">
                     <source srcset="foto ejemplo.jpg">
-                    <img src="foto ejemplo.jpg" alt="" style="width:auto;">
+                    <img src="foto ejemplo.jpg" alt="">
                   </picture>
             </div>
         </div>
@@ -127,7 +127,7 @@
     <picture id="arreglofoto">
         <source srcset="foto1234.jpg" media="(max-width: 580px)">
         <source srcset="foto ejemplo.jpg">
-        <img src="foto ejemplo.jpg" alt="" style="width:auto;">
+        <img src="foto ejemplo.jpg" alt="">
       </picture>
 </section>
 <footer>
