--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <section id="hero">
     <h1> CLOTHES TRADES</h1>
-    <a href="#"></a>
+    <a href="galeria.html"><button id="botonmain">COMPRA YA!</button></a>
 </section>  
 
 
@@ -37,12 +37,14 @@
     <picture id="arreglofoto">
         <source srcset="foto1234.jpg" media="(max-width: 580px)">
         <source srcset="foto ejemplo.jpg">
-        <img src="foto ejemplo.jpg" alt="">
+        <img class="imagenesfinales" src="Cambioderopa.jpg" alt="">
       </picture>
     <div>
         <h2>Somos Clothes Trades</h2>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis aliquid incidunt aperiam adipisci omnis, repellendus dolores provident beatae, corporis voluptatum excepturi accusantium quos rerum ea nulla iure minima fugit consequatur.
+            ¡Bienvenido a nuestra plataforma de intermediación de compra/venta de ropa!
+
+Somos el enlace perfecto entre aquellos que desean comprar y vender ropa de manera rápida, segura y conveniente. ¿Tienes prendas que ya no usas? ¡No te preocupes! Con nosotros, puedes convertirlas en efectivo de forma sencilla.
         </p>
     </div>  
 </section>
@@ -52,27 +54,27 @@
   <div class="contenedorsection2">
     <div class="apartados">
 <h3>
-    Intercambia ropa de forma segura</h3>
+    INTERCAMBIA ROPA DE FORMA SEGURA</h3>
 <p class="ps2">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam sit voluptas deleniti perspiciatis, nihil sint veniam accusantium dolorum doloremque omnis illo laboriosam voluptate totam. Reprehenderit dicta rerum illo quaerat magni.
+    Renueva tu armario de manera única: intercambia ropa con otras personas. Encuentra piezas únicas y contribuye a un estilo de vida sostenible. Únete a nuestra comunidad hoy mismo.
 </p>
 <picture id="arreglofoto">
     <source srcset="foto1234.jpg" media="(max-width: 580px)">
     <source srcset="foto ejemplo.jpg">
-    <img src="foto ejemplo.jpg" alt="">
+    <img class="imagenesfinales" src="toty.png  " alt="">
   </picture>
    </div>
    
    <div class="apartados">
-    <h3>COMPRA/VENDE ropa con otros!!</h3>
+    <h3>COMPRA/VENDE ROPA CON OTROS</h3>
     <p class="ps2">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque vero sit a rerum hic minus dicta adipisci doloribus quo, voluptatem ex. Debitis cum fugit delectus consectetur vel at iste quaerat.
+        Explora una nueva forma de renovar tu estilo: compra y vende ropa con facilidad en nuestra plataforma. Encuentra piezas exclusivas y da nueva vida a tu armario. Únete a nuestra comunidad de compradores y vendedores de ropa hoy mismo
     </p>
    
     <picture id="arreglofoto">
         <source srcset="foto1234.jpg" media="(max-width: 580px)">
         <source srcset="foto ejemplo.jpg">
-        <img src="foto ejemplo.jpg" alt="">
+        <img class="imagenesfinales"   src="foto1.jpg" alt="">
       </picture>
 </div>
     </div>
@@ -89,12 +91,12 @@
                 <picture id="arreglofoto">
                     <source srcset="foto1234.jpg" media="(max-width: 580px)">
                     <source srcset="foto ejemplo.jpg">
-                    <img src="foto ejemplo.jpg" alt="">
+                    <img class="imagenesfinales" src="transferencias.jpg" alt="">
                   </picture>
             </div>
         </div>
         <div class="Parrafo-1">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, hic eos. Veniam voluptas eum, delectus dolorum sed ex facere dolores repudiandae dolore illum minus mollitia dicta similique ad nostrum. Suscipit.</p>
+            <p>Para concretar las compras, podras realizarlas mediante todo tipo de transferencias</p>
             <button class="botones">+ INFO</button>
         </div>
         <div class="LADO-2">
@@ -103,14 +105,14 @@
                 <picture id="arreglofoto">
                     <source srcset="foto1234.jpg" media="(max-width: 580px)">
                     <source srcset="foto ejemplo.jpg">
-                    <img src="foto ejemplo.jpg" alt="">
+                    <img class="imagenesfinales" src="tarjetasdecreditos.jpg" alt="">
                   </picture>
             </div>
         </div>
 
 
         <div class="PARRAFO-2">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus sed quo excepturi, incidunt quidem, alias numquam corrupti eius aut eos rerum architecto molestiae quod quia expedita pariatur? Excepturi, saepe neque!</p>
+            <p>Descubre la comodidad de pagar con tarjeta en nuestra plataforma. Solicita y administra tarjetas de crédito fácilmente</p>
             <button class="botones">+ INFO</button>
         </div>
       </div>
@@ -127,7 +129,7 @@
     <picture id="arreglofoto">
         <source srcset="foto1234.jpg" media="(max-width: 580px)">
         <source srcset="foto ejemplo.jpg">
-        <img src="foto ejemplo.jpg" alt="">
+        <img src="intercambiofinal.png" alt="">
       </picture>
 </section>
 <footer>
