--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@ Somos el enlace perfecto entre aquellos que desean comprar y vender ropa de mane
     <source srcset="foto ejemplo.jpg">
     <img class="imagenesfinales" src="toty.png  " alt="">
   </picture>
+<div>
+    <button class="botons2">
+        VENDEDORES
+    </button>
+</div>
+
    </div>
    
    <div class="apartados">
@@ -76,6 +82,14 @@ Somos el enlace perfecto entre aquellos que desean comprar y vender ropa de mane
         <source srcset="foto ejemplo.jpg">
         <img class="imagenesfinales"   src="foto1.jpg" alt="">
       </picture>
+      
+      <div>
+        <a href="galeria.html">
+            <button class="botons2">
+                AGREGAR
+            </button>
+        </a>
+      </div>
 </div>
     </div>
 </section>
