--- a/Vendedores.html
+++ b/Vendedores.html
@@ -25,47 +25,48 @@
 
 </header>
 
-<br>
 
 <div class="container">
     <div class="row">
       <div class="col-md-4">
         <div class="card" style="width: 18rem;">
           <!-- Contenido de la primera tarjeta -->
-          <img src="toty.png" class="card-img-top" alt="...">
+          <img src="fotoperfil1.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Conrado Tojo</h5>
+            <p class="card-text">Zona: Bernal</p>
+            <a href="#" class="btn btn-primary">Explorar Coleccion</a>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="card" style="width: 18rem;">
           <!-- Contenido de la segunda tarjeta -->
-          <img src="toty.png" class="card-img-top" alt="...">
+          <img src="fotoperfil2.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Sofía Martínez</h5>
+            <p class="card-text">Zona: La Plata.</p>
+            <a href="#" class="btn btn-primary">Explorar Colección</a>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="card" style="width: 18rem;">
           <!-- Contenido de la tercera tarjeta -->
-          <img src="toty.png" class="card-img-top" alt="...">
+          <img src="fotoperfil3.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Tomás Rodríguez</h5>
+            <p class="card-text">Zona: Palermo</p>
+            <a href="#" class="btn btn-primary">Explorar Colección</a>
           </div>
         </div>
       </div>
     </div>
-  </    div>
+  </div>
 
-
+  <footer>
+    <p> Conrado Tojo ITBA © 2024</p>
+</footer>
 
 
 
