--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <section id="c">
     <picture id="arreglofoto">
-        <source srcset="foto1234.jpg" media="(max-width: 580px)">
+        <source srcset="Cambioderopa.jpg" media="(max-width: 580px)">
         <source srcset="foto ejemplo.jpg">
         <img class="imagenesfinales" src="Cambioderopa.jpg" alt="">
       </picture>
@@ -59,14 +59,15 @@ Somos el enlace perfecto entre aquellos que desean comprar y vender ropa de mane
     Renueva tu armario de manera única: intercambia ropa con otras personas. Encuentra piezas únicas y contribuye a un estilo de vida sostenible. Únete a nuestra comunidad hoy mismo.
 </p>
 <picture id="arreglofoto">
-    <source srcset="foto1234.jpg" media="(max-width: 580px)">
+    <source srcset="foto1.jpg" media="(max-width: 580px)">
     <source srcset="foto ejemplo.jpg">
-    <img class="imagenesfinales" src="toty.png  " alt="">
+    <img class="imagenesfinales" src="toty.png" alt="">
   </picture>
 <div>
-    <button class="botons2">
-        VENDEDORES
-    </button>
+    <a href="Vendedores.html">
+        <button class="botons2">VENDEDORES</button>
+    </a>
+    
 </div>
 
    </div>
@@ -78,7 +79,7 @@ Somos el enlace perfecto entre aquellos que desean comprar y vender ropa de mane
     </p>
    
     <picture id="arreglofoto">
-        <source srcset="foto1234.jpg" media="(max-width: 580px)">
+        <source srcset="Imagen 4.jpg" media="(max-width: 580px)">
         <source srcset="foto ejemplo.jpg">
         <img class="imagenesfinales"   src="foto1.jpg" alt="">
       </picture>
@@ -86,7 +87,7 @@ Somos el enlace perfecto entre aquellos que desean comprar y vender ropa de mane
       <div>
         <a href="galeria.html">
             <button class="botons2">
-                AGREGAR
+                COMPRAR
             </button>
         </a>
       </div>
@@ -103,7 +104,7 @@ Somos el enlace perfecto entre aquellos que desean comprar y vender ropa de mane
             <h2 class="textolado1">TRANSFERENCIAS</h2>
             <div class="FOTOSS3">
                 <picture id="arreglofoto">
-                    <source srcset="foto1234.jpg" media="(max-width: 580px)">
+                    <source srcset="foto reemplazo 1.jpg" media="(max-width: 580px)">
                     <source srcset="foto ejemplo.jpg">
                     <img class="imagenesfinales" src="transferencias.jpg" alt="">
                   </picture>
@@ -117,7 +118,7 @@ Somos el enlace perfecto entre aquellos que desean comprar y vender ropa de mane
             <h2 class="textolado1">TARJETAS DE CREDITO/DEBITO</h2>
             <div class="FOTOSS3">
                 <picture id="arreglofoto">
-                    <source srcset="foto1234.jpg" media="(max-width: 580px)">
+                    <source srcset="foto reemplazo 2.jpg" media="(max-width: 580px)">
                     <source srcset="foto ejemplo.jpg">
                     <img class="imagenesfinales" src="tarjetasdecreditos.jpg" alt="">
                   </picture>
@@ -141,7 +142,7 @@ Somos el enlace perfecto entre aquellos que desean comprar y vender ropa de mane
         <li>✅ Distintas Monedas</li>
     </ul>  
     <picture id="arreglofoto">
-        <source srcset="foto1234.jpg" media="(max-width: 580px)">
+        <source srcset="foto reemplazo 3.jpg" media="(max-width: 580px)">
         <source srcset="foto ejemplo.jpg">
         <img src="intercambiofinal.png" alt="">
       </picture>
