--- a/Vendedores1.html
+++ b/Vendedores1.html
@@ -7,38 +7,49 @@
     <title>Document</title>
 </head>
 <body>
-    
+  
+    <header>
+        <nav>
+            <a href="index.html">CLOTHES TRADES</a>
+        </nav>
+    </header>
+
+
+
 <div id="Filtrar-Div">
+    <H3>BUSCADOR</H3>
     <input id="Filtrar" type="text">
 </div>
+
+
 
 <section id="Contenedor-Vendedores">
     <div id="Galeria-Vendedores">
         <ul id="lista">
             <li>
                 <div class="Vendedor">
-                    <img src="toty.png" alt="">
-                    <h3></h3>
-                    <p>remera</p>
-                </div>
-            </li>
-            <li>
-                <div class="Vendedor">
-                    <img src="toty.png" alt="">
+                    <img src="Imagen 3.jpg" alt="">
                     <h3></h3>
                     <p></p>
                 </div>
             </li>
             <li>
                 <div class="Vendedor">
-                    <img src="toty.png" alt="">
+                    <img src="Imagen1.png" alt="">
                     <h3></h3>
                     <p></p>
                 </div>
             </li>
             <li>
                 <div class="Vendedor">
-                    <img src="toty.png" alt="">
+                    <img src="Imagen5.jpg" alt="">
+                    <h3></h3>
+                    <p></p>
+                </div>
+            </li>
+            <li>
+                <div class="Vendedor">
+                    <img src="Imagen6.jpg" alt="">
                     <h3></h3>
                     <p></p>
                 </div>
@@ -47,7 +58,20 @@
     </div>
  
 
+    <div class="contenedor1">
+        <img src="Imagen 4.jpg" alt="Imagen" class="imagen">
+        <div class="texto"></div>
+    </div>
+    
 </section>
+
+
+
+<div class="contenedor1">
+    <img src="Imagen1.png" alt="Imagen" class="imagen">
+    <div class="texto">Remera</div>
+</div>
+
 
     <script src="buscador.js"></script>
 
