--- a/galeria.html
+++ b/galeria.html
@@ -80,6 +80,7 @@
 				<div class="info-product">
 					<h2>Remera Wisconsinbly</h2>
 					<p class="price">$12.00</p>
+					<p class="price">Vendedor: Tomás Rodríguez</p>
 					<button class="btn-add-cart">Añadir al carrito</button>
 				</div>
 			</div>
@@ -93,6 +94,7 @@
 				<div class="info-product">
 					<h2>Remera Vintage</h2>
 					<p class="price">$20.00</p>
+					<p class="price">Vendedor: Tomás Rodríguez</p>
 					<button class="btn-add-cart">Añadir al carrito</button>
 				</div>
 			</div>
@@ -106,6 +108,7 @@
 				<div class="info-product">
 					<h2>Campera Francia</h2>
 					<p class="price">$50.00</p>
+					<p class="price">Vendedor: Tomás Rodríguez</p>
 					<button class="btn-add-cart">Añadir al carrito</button>
 				</div>
 			</div>
@@ -119,6 +122,7 @@
 				<div class="info-product">
 					<h2>Campera Manchester United</h2>
 					<p class="price">$90.00</p>
+					<p class="price">Sofía Martinez</p>
 					<button class="btn-add-cart">Añadir al carrito</button>
 				</div>
 			</div>
@@ -132,6 +136,7 @@
 				<div class="info-product">
 					<h2>Remera Milan</h2>
 					<p class="price">$50.00</p>
+					<p class="price">Vendedor: Conrado Tojo</p>
 					<button class="btn-add-cart">Añadir al carrito</button>
 				</div>
 			</div>
@@ -145,6 +150,7 @@
                 <div class="info-product">
                   <h2>Remera Retro Real Madrid</h2>
                   <p class="price">$50.00</p>
+				  <p class="price">Vendedor: Conrado Tojo</p>
                   <button class="btn-add-cart">Añadir al carrito</button>
                 </div>
               </div>
