--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Somos el enlace perfecto entre aquellos que desean comprar y vender ropa de mane
     <img class="imagenesfinales" src="toty.png" alt="">
   </picture>
 <div>
-    <a href="Vendedores.html">
+    <a href="Vendedores-final.html">
         <button class="botons2">VENDEDORES</button>
     </a>
     
@@ -159,6 +159,3 @@ Somos el enlace perfecto entre aquellos que desean comprar y vender ropa de mane
 
 </body>
 </html>
-
-
-
