--- a/galeria.html
+++ b/galeria.html
@@ -13,7 +13,9 @@
 	</head>
 	<body>
 		<header>
-			<a href="index.html"><h1>Inicio</h1></a>
+			<a href="index.html"><h2>Inicio</h2></a>
+			
+			<a href="Vendedores-final.html"><h1>Vendedores</h1></a>
 
 			<div class="container-icon">
                 <div class="container-cart-icon">
@@ -122,7 +124,7 @@
 				<div class="info-product">
 					<h2>Campera Manchester United</h2>
 					<p class="price">$90.00</p>
-					<p class="price">Sofía Martinez</p>
+					<p class="price">Vendedor: Sofía Martinez</p>
 					<button class="btn-add-cart">Añadir al carrito</button>
 				</div>
 			</div>
@@ -156,6 +158,7 @@
               </div>
 		</div>
 
+<br>
         <script src="index.js"></script>
 	</body>
 </html>
