--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@ Somos el enlace perfecto entre aquellos que desean comprar y vender ropa de mane
         </div>
         <div class="Parrafo-1">
             <p>Para concretar las compras, podras realizarlas mediante todo tipo de transferencias</p>
-            <button class="botones">+ INFO</button>
+            <a href="info.html">
+                <button class="botones">+ INFO</button>
+            </a>
         </div>
         <div class="LADO-2">
             <h2 class="textolado1">TARJETAS DE CREDITO/DEBITO</h2>
@@ -128,7 +130,7 @@ Somos el enlace perfecto entre aquellos que desean comprar y vender ropa de mane
 
         <div class="PARRAFO-2">
             <p>Descubre la comodidad de pagar con tarjeta en nuestra plataforma. Solicita y administra tarjetas de crédito fácilmente</p>
-            <button class="botones">+ INFO</button>
+            <a href="info.html"><button class="botones">+ INFO</button></a>
         </div>
       </div>
 </section>
